--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -1,2 +1,17 @@
+
 <h1>Hier tolle Visualisierungen....!</h1>
-<p>Lol</p>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<p>Das ist ein kleiner Test</p>
+
+<p class="test-primary-font" tabIndex="1">Schrift in der Primary Color</p>
+
+<div class="color-test1">Test mit Farben</div>
+<div class="color-test2">Weiterer Test mit Farben</div>
+<div class="color-test3">Test 3</div>
+
+<a href="">test</a>
+
+<p-cascadeSelect [(ngModel)]="selectedCity1" [options]="countries" optionLabel="cname" optionGroupLabel="name"
+                 [optionGroupChildren]="['states', 'cities']" [style]="{'minWidth': '14rem'}"></p-cascadeSelect>
