--- a/celvis/src/app/app.component.html
+++ b/celvis/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- This Component is mainly for the basic structure and shouldn't contain logical code -->
 <router-outlet></router-outlet>
+
+
+<h1>Test Plot</h1>
+<plotly-test></plotly-test>
