--- a/celvis/src/app/api-test/api-test.component.html
+++ b/celvis/src/app/api-test/api-test.component.html
@@ -1,3 +1,7 @@
 <div class="center-list">
-  <p-listbox [options]="options" [(ngModel)]="selectedOption" [filter]="true" optionValue="name" optionLabel="name" [style]="{'width':'15rem'}"></p-listbox>
+<!--  <p-listbox [options]="options" [(ngModel)]="selectedOption" [filter]="true" optionValue="name" optionLabel="name" [style]="{'width':'15rem'}"></p-listbox>-->
 </div>
+
+
+
+<pre>{{options | json}}</pre>
