--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -1,5 +1,7 @@
 
-<h1>Hier tolle Visualisierungen....!</h1>
+<h1>CelVis</h1>
+<settings></settings>
+
 <h2>Heading 2</h2>
 <h3>Heading 3</h3>
 <h4>Heading 4</h4>
