Basic slider added

--- a/celvis/src/app/settings/settings.component.html
+++ b/celvis/src/app/settings/settings.component.html
@@ -5,3 +5,9 @@
 
   <!--  <p-listbox [options]="options" [(ngModel)]="selectedOption" [filter]="true" optionValue="name" optionLabel="name" [style]="{'width':'15rem'}"></p-listbox>-->
 </div>
+
+<h5>PrimeNG Slider component</h5>
+<h5>Input: {{val}}</h5>
+<input type="text" pInputText [(ngModel)]="val" />
+<p-slider [(ngModel)]="val" [min]="min" [max]="max"></p-slider>
+
