--- a/celvis/src/app/header/header.component.scss
+++ b/celvis/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 header{
     font-size: larger;
-    background-color: rgb(21, 99, 34);
+    background-color: var(--menu-background-color);
 }
 
 .logo {
