--- a/celvis/src/app/header/header.component.html
+++ b/celvis/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <header>
-    <img class="logo" src="assets/favicons/favicon.png" >
+    <img class="logo" src="assets/favicons/celonis_logo.png" >
 </header>
