Data Service Update

--- a/celvis/src/app/settings/settings.component.html
+++ b/celvis/src/app/settings/settings.component.html
@@ -1,10 +1,14 @@
 <div class="center-list">
-  <p-cascadeSelect [(ngModel)]="selectedTable" [options]="tables" optionLabel="name" optionGroupLabel="name"
-                   [optionGroupChildren]="['columns']" [style]="{'minWidth': '14rem'}"
-                   (onChange)="updateTableSelection()"
-                   placeholder="Select a City"></p-cascadeSelect>
+  <p-cascadeSelect [(ngModel)]="selectedTree" [options]="tree" optionLabel="name" optionGroupLabel="name"
+                   [optionGroupChildren]="['folders', 'assets']" [style]="{'minWidth': '14rem'}"
+                   (onChange)="loadTree()"
+                   placeholder="Select Dataset"></p-cascadeSelect>
 
-  <!--  <p-listbox [options]="options" [(ngModel)]="selectedOption" [filter]="true" optionValue="name" optionLabel="name" [style]="{'width':'15rem'}"></p-listbox>-->
+    <p-cascadeSelect [(ngModel)]="selectedTable" [options]="tables" optionLabel="name" optionGroupLabel="name"
+                   [optionGroupChildren]="['columns']" [style]="{'minWidth': '14rem'}"
+                   (onChange)="updateTableSelection()" *ngIf="tables?.length"
+                   placeholder="Select Column"></p-cascadeSelect>
+
 </div>
 
 <div class="slider">
