--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -1,8 +1,9 @@
 
 <app-header></app-header>
-<h1>CelVis</h1>
+<!--<h1>CelVis</h1> -->
 <settings></settings>
 
+<!--
 <h2>Heading 2</h2>
 <h3>Heading 3</h3>
 <h4>Heading 4</h4>
@@ -19,4 +20,4 @@
 <p-cascadeSelect [(ngModel)]="selectedCity1" [options]="countries" optionLabel="cname" optionGroupLabel="name"
                  [optionGroupChildren]="['states', 'cities']" [style]="{'minWidth': '14rem'}"></p-cascadeSelect>
 
-
+-->
