Data Service Update

--- a/celvis/src/app/settings/settings.component.html
+++ b/celvis/src/app/settings/settings.component.html
@@ -4,17 +4,18 @@
                    (onChange)="loadTree()"
                    placeholder="Select Dataset"></p-cascadeSelect>
 
-    <p-cascadeSelect [(ngModel)]="selectedTable" [options]="tables" optionLabel="name" optionGroupLabel="name"
+  <p-cascadeSelect [(ngModel)]="selectedTable" [options]="tables" optionLabel="name" optionGroupLabel="name"
                    [optionGroupChildren]="['columns']" [style]="{'minWidth': '14rem'}"
                    (onChange)="updateTableSelection()" *ngIf="tables?.length"
                    placeholder="Select Column"></p-cascadeSelect>
-
 </div>
 
+{{unique_clusters | json}}
+
 <div class="slider">
-<h5>PrimeNG Slider component</h5>
-<h5>Input: {{val}}</h5>
-<input type="text" pInputText [(ngModel)]="val" />
-<p-slider [(ngModel)]="val" [min]="min" [max]="max"></p-slider>
+  <h5>PrimeNG Slider component</h5>
+  <h5>Input: {{val}}</h5>
+  <input type="text" pInputText [(ngModel)]="val"/>
+  <p-slider [(ngModel)]="val" [min]="min" [max]="max" (onSlideEnd)="updateSlider()"></p-slider>
 </div>
 
