--- a/celvis/src/app/header/header.component.scss
+++ b/celvis/src/app/header/header.component.scss
@@ -1,19 +1,18 @@
-header{
-    font-size: larger;
-    background-color: var(--menu-background-color);
-    color: var(--menu-text-color);
-    display: flex;
-    align-items: center;
+header {
+  font-size: larger;
+  background-color: var(--menu-background-color);
+  color: var(--menu-text-color);
+  display: flex;
+  align-items: center;
+  padding: 12px 0;
 }
 
-.headerspace{
-    margin-left: 25px
+.headerspace {
+  margin: 0 0 0 25px;
 }
 
 .logo {
-    height: 50px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    margin-left: 50px;
+  height: 50px;
+  margin: 0 0 0 50px;
 }
 
