Data Service Update

--- a/celvis/src/app/settings/settings.component.html
+++ b/celvis/src/app/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="center-list">
+<div >
   <p-cascadeSelect [(ngModel)]="selectedTree" [options]="tree" optionLabel="name" optionGroupLabel="name"
                    [optionGroupChildren]="['folders', 'assets']" [style]="{'minWidth': '14rem'}"
                    (onChange)="loadTree()"
