--- a/celvis/src/styles.scss
+++ b/celvis/src/styles.scss
@@ -83,3 +83,9 @@ html {
   //--bg-rank-4: #ff8884;
   //--color-strong-blue: #0778d0;
 }
+
+
+.center {
+  display: flex;
+  justify-content: center;
+}
