--- a/celvis/src/app/app.component.html
+++ b/celvis/src/app/app.component.html
@@ -3,11 +3,10 @@
 
 
 <h1>Test Plot</h1>
-<plotly-test></plotly-test>
+<plotly-chart></plotly-chart>
 
 
 <h1>API TEST</h1>
-<api-test></api-test>
 
 
 <div class="dist"></div>
