--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -4,8 +4,8 @@
 
 <div class="boxes">
     <div class="box">
-       <div><app-card> </app-card></div>
-       <div><app-card> </app-card></div>
+       <div class="box-item"><app-card> </app-card></div>
+       <div class="box-item"><app-card> </app-card></div>
      </div>
    </div>
 <!--<h1>CelVis</h1> -->
