--- a/celvis/src/app/card/card.component.scss
+++ b/celvis/src/app/card/card.component.scss
@@ -1,10 +1,9 @@
 .card {
     min-height: 600px;
     background-color: rgb(255, 255, 255);
-    width: 800px;
+    width: 100%;
     border: 1px solid rgb(252, 252, 252) ;
-    border-radius:20px ;
+    border-radius: 20px;
     overflow: hidden;
 }
 
-    
