--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -1,13 +1,18 @@
-
-
 <app-header></app-header>
 
 <div class="boxes">
-    <div class="box">
-       <div class="box-item"><app-card> </app-card></div>
-       <div class="box-item"><app-card> </app-card></div>
-     </div>
-   </div>
+  <div class="box">
+    <div class="box-item">
+      <app-card></app-card>
+    </div>
+    <div class="box-item">
+      <app-card></app-card>
+    </div>
+  </div>
+  <div class="box-item full-width">
+    <app-card></app-card>
+  </div>
+</div>
 <!--<h1>CelVis</h1> -->
 <settings></settings>
 
