--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -2,20 +2,17 @@
 
 <settings></settings>
 
+<!--<h1>CelVis</h1> -->
 <div class="boxes">
-  <div class="box">
-    <div class="box-item">
-      <app-card></app-card>
-    </div>
-    <div class="box-item">
-      <app-card></app-card>
-    </div>
+  <div class="double-card">
+    <div class="card"></div>
+    <div class="card"></div>
   </div>
-  <div class="box-item full-width">
-    <app-card></app-card>
+
+  <div class="full-width-card">
+    <div class="card"></div>
   </div>
 </div>
-<!--<h1>CelVis</h1> -->
 
 
 <!--
