--- a/celvis/src/app/main/main.component.scss
+++ b/celvis/src/app/main/main.component.scss
@@ -22,24 +22,41 @@
   }
 }
 
-.box {
+.boxes {
+  --margin: 1rem;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 1rem;
+  flex-direction: column;
+  padding: 30px;
+  margin: var(--margin);
 
-  .box-item {
-    width: calc(50% - 1rem);
-  }
-
-  .box-item.full-width {
+  > * {
     width: 100%;
   }
-}
 
-.boxes {
-  padding-top: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
+  .card {
+    min-height: 600px;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    border: 1px solid rgb(252, 252, 252) ;
+    border-radius: 20px;
+    overflow: hidden;
+  }
+
+  .double-card {
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: var(--margin);
+  }
+
+  .double-card .card {
+    width: calc(50% - 0.5 * var(--margin));
+  }
+
+  .full-width-card .card {
+    width: 100%;
+  }
 }
 
 
