--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -10,7 +10,10 @@
   </div>
 
   <div class="full-width-card">
-    <div class="card"></div>
+    <div class="card">
+      <h1>Test Plot</h1>
+      <plotly-chart></plotly-chart>
+    </div>
   </div>
 </div>
 
