--- a/celvis/src/app/header/header.component.html
+++ b/celvis/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
     <img class="logo" src="assets/favicons/celonis_logo.png" >
     <h1 class="headerspace">Celonis Hackathon</h1>
+    <p class="header_comment">Aachen</p>
 </header>
