--- a/celvis/src/app/settings/settings.component.html
+++ b/celvis/src/app/settings/settings.component.html
@@ -13,12 +13,15 @@
   </span>
 
     <!-- Select Correct Table & Column Entry -->
-    <span class="p-float-label" *ngIf="tables?.length">
-    <p-cascadeSelect [options]="tables" optionLabel="name" optionGroupLabel="name"
+    <span class="p-float-label" *ngIf="valid_variants?.length">
+    <p-cascadeSelect #csTmp
+      [options]="valid_variants" optionLabel="name" optionGroupLabel="name"
+                     [(ngModel)]="selectedVariant"
                      inputId="tableSelectId"
                      [optionGroupChildren]="['columns']" [style]="{'minWidth': '14rem'}"
                      (onChange)="updateColumnSelection($event)">
-                     </p-cascadeSelect>
+
+   </p-cascadeSelect>
     <label for="tableSelectId">Select Column</label>
   </span>
   </div>
