Dataset selection changed

--- a/celvis/src/app/settings/settings.component.html
+++ b/celvis/src/app/settings/settings.component.html
@@ -11,7 +11,7 @@
     ></p-cascadeSelect>
     <label for="dataSelectID">Select Dataset</label>
   </span>
-
+    <div class="left-padding">
     <!-- Select Correct Table & Column Entry -->
     <span class="p-float-label" *ngIf="valid_variants?.length">
     <p-cascadeSelect #csTmp
@@ -24,6 +24,7 @@
    </p-cascadeSelect>
     <label for="tableSelectId">Select Column</label>
   </span>
+    </div>
   </div>
 </div>
 
