--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -8,7 +8,9 @@
 <div class="boxes">
   <div class="double-card">
     <div class="card"></div>
-    <div class="card"></div>
+    <div class="card">
+      <app-piechart></app-piechart>
+    </div>
   </div>
 
   <div class="full-width-card">
