--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -13,6 +13,12 @@
     </div>
   </div>
 
+  <div class="double-card">
+    <div class="card" id="processTree"></div>
+    <div class="card" id="petriNet"></div>
+  </div>
+
+
   <div class="full-width-card">
     <div class="card">
       <h1>Test Plot</h1>
