--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -7,9 +7,11 @@
 <!--<h1>CelVis</h1> -->
 <div class="boxes">
   <div class="double-card">
-    <div class="card"></div>
     <div class="card">
       <app-piechart></app-piechart>
+    </div>
+    <div class="card">
+      <characteristic-values></characteristic-values>
     </div>
   </div>
 
