--- a/celvis/src/app/settings/settings.component.scss
+++ b/celvis/src/app/settings/settings.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-top: 1rem;
 
   .explanation {
     margin: 0;
@@ -11,9 +12,24 @@
     margin-left: 5rem;
     display: flex;
     flex-direction: row;
+    flex: 1;
+
+    &.slider {
+      justify-content: space-between;
+    }
 
     .second-child {
       margin-left: 2rem;
+    }
+
+    .slider-wrapper {
+      width: calc(50% - 1rem);
+    }
+
+    .slider-header {
+      margin: 0 0 0 .5rem;
+      font-size: 12px;
+      color: #6c757d;
     }
   }
 }
